modified:   Paper/.vscode/ltex.hiddenFalsePositives.en-US.txt 	modified:   Paper/Bib/History_IA.bib 	new file:   Paper/HistoryIA 2.aux 	modified:   Paper/HistoryIA.bbl 	modified:   Paper/HistoryIA.pdf 	modified:   Paper/HistoryIA.synctex.gz 	modified:   Paper/HistoryIA.tex 	modified:   Paper/SECTIONS/section_A.tex 	modified:   Paper/SECTIONS/section_B.tex

--- a/Paper/Bib/History_IA.bib
+++ b/Paper/Bib/History_IA.bib
@@ -1,3 +1,11 @@
+@book{adamsBritainAmericanWar1925,
+  author    = {Adams, Ephraim Douglass},
+  publisher = {Longmans, Green \& Co. Ltd.},
+  title     = {Great Britain and the American Civil War},
+  year      = {1925},
+  volumes   = {II}
+}
+
 @book{arnoldHistoryCotton1864,
   title     = {The {{History}} of the {{Cotton Famine}}, {{From}} the {{Fall}} of {{Sumter}} to the {{Passing}} of the {{Public Works Act}}},
   author    = {Arnold, R. Arthur},
@@ -5,6 +13,17 @@
   publisher = {{London, Saunders, Otley, and Co.}},
   langid    = {english},
   pagetotal = {570}
+}
+
+@article{arthi2022recessions,
+  title     = {Recessions, mortality, and migration bias: Evidence from the Lancashire cotton famine},
+  author    = {Arthi, Vellore and Beach, Brian and Hanlon, W Walker},
+  journal   = {American Economic Journal: Applied Economics},
+  volume    = {14},
+  number    = {2},
+  pages     = {228--255},
+  year      = {2022},
+  publisher = {American Economic Association 2014 Broadway, Suite 305, Nashville, TN 37203-2425}
 }
 
 @article{baileyOtherSide1994,
@@ -21,20 +40,6 @@
   issn         = {00021482, 15338290},
   url          = {http://www.jstor.org/stable/3744401},
   urldate      = {2024-11-01}
-}
-
-@article{ginzbergeconomicsbritish1936,
-  issn      = {00021482, 15338290},
-  url       = {http://www.jstor.org/stable/3739625},
-  author    = {Eli Ginzberg},
-  journal   = {Agricultural History},
-  number    = {4},
-  pages     = {147--156},
-  publisher = {Agricultural History Society},
-  title     = {The Economics of British Neutrality during the American Civil War},
-  urldate   = {2024-11-21},
-  volume    = {10},
-  year      = {1936}
 }
 
 @book{davismessagespapers1966,
@@ -61,6 +66,28 @@
   number       = {1},
   pages        = {1--19},
   file         = {/Users/autumn_keesbury/Zotero/storage/LY33WSWT/Ewan - 2005 - The Emancipation Proclamation and British Public O.pdf}
+}
+
+@article{ginzbergeconomicsbritish1936,
+  issn      = {00021482, 15338290},
+  url       = {http://www.jstor.org/stable/3739625},
+  author    = {Eli Ginzberg},
+  journal   = {Agricultural History},
+  number    = {4},
+  pages     = {147--156},
+  publisher = {Agricultural History Society},
+  title     = {The Economics of British Neutrality during the American Civil War},
+  urldate   = {2024-11-21},
+  volume    = {10},
+  year      = {1936}
+}
+
+@book{mcphersonBattleCry1988,
+  author    = {McPherson, James},
+  editor    = {},
+  publisher = {Oxford University Press},
+  title     = {Battle Cry of Freedom: The Civil War Era},
+  year      = {1988}
 }
 
 @book{mitchellAbstractBritish1976,
@@ -113,12 +140,4 @@
   date        = {1884},
   institution = {48th Cong., 1st. sess.},
   abstract    = {A compilation of foreign commodities imported and entered for consumption in the United States ; showing the quantities, values, rates of duty, amount of duty received, the average cost, and duties reduced to an equivalent ad valorem rate ; summaries of the values and duties of the principal class or groups ; also, values and duties received and expense at each Customs district and port of delivery ; with schedules of the articles, quantities, and values admitted free of duty, viz: transfers from bond to manufacturing warehouse, materials used in the construction and equipment of vessels, from dominion of Canada, \&c., from the Hawaiian Islands, and salt used in curing fish, during the fiscal years ended June 30, 1867 to 1883, inclusive}
-}
-
-@book{mcphersonBattleCry1988,
-  author    = {McPherson, James},
-  editor    = {},
-  publisher = {Oxford University Press},
-  title     = {Battle Cry of Freedom: The Civil War Era},
-  year      = {1988}
 }
