--- a/Paper/HistoryIA.tex
+++ b/Paper/HistoryIA.tex
@@ -115,6 +115,7 @@ top=60pt
 
 \pagenumbering{arabic}
 \renewcommand{\thesection}{Section \Alph{section}}
+\renewcommand{\thesubsection}{\Alph{section}.\arabic{subsection}}
 \renewcommand{\thefigure}{\Alph{section}.\roman{figure}}
 
 %% HEADERS / FOOTERS
