--- a/Paper/SECTIONS/section_A.tex
+++ b/Paper/SECTIONS/section_A.tex
@@ -17,7 +17,7 @@ to include some outdated information or analysis, as is the nature of the field.
 through the fact that it provides vast quantities of data, compiled from various other sources, regarding the economic state of the nation, and specifically
 the South, which are readily available for analysis and interpretation.
 
-For reference on the diplomatic affairs of the CSA with Great Britain during the Civil War, I have found the compilation \citetitle{davismessagespapers1966}
+For contemporary reference on the diplomatic affairs of the CSA with Great Britain during the Civil War, I have found \citetitle{davismessagespapers1966}
 to be an excellent primary account of the Confederate perception of diplomatic prospects in Great Britain. This source provides a near-comprehensive 
 record of the reports sent from the ambassadors of the CSA in Britain and received by the officials of the nation. The value of this source is difficult
 to understate, as it provides ample contemporary evidence for the state of affairs between the two parties on which this paper shall focus, and further
