--- a/Paper/SECTIONS/section_B.tex
+++ b/Paper/SECTIONS/section_B.tex
@@ -27,12 +27,44 @@ effective diplomatic strategy is not comparably evident, and is the central focu
 
 In terms of end goals, the CSA had two when it came to diplomacy with the English: (1) an official recognition of the sovereignty of the nation, with the
 understanding that this would lead to mediation of the conflict by Britain, and (2) the removal of the Union naval blockade on Southern ports
-\Autocites()()[][pp. 383]{mcphersonBattleCry1988}[W.L. Yancey and A. Dudley Mann to Secretary of State R. Toombs, July 15, 1861, in:][pp. 45]{davismessagespapers1966}.
+\Autocites()()[][383]{mcphersonBattleCry1988}[W.L. Yancey and A. Dudley Mann to Secretary of State R. Toombs, July 15, 1861, in:][45]{davismessagespapers1966}.
 It is the latter issue's nature terms of international law, and effects on the cotton exports of the south, that would play the most significant role in
 the Anglo-Confederate relations during the early war, as it presented a goal which was \say{much more likely to be obtained within a reasonable time} than
-recognition\autocite[John Slidell to Secretary of State R.M.T. Hunter, September 26, 1862, in:][pp. 187]{davismessagespapers1966}. Though this issue does not
+recognition\autocite[John Slidell to Secretary of State R.M.T. Hunter, September 26, 1862, in:][187]{davismessagespapers1966}. Though this issue does not
 directly relate of the answer of the question regarding the role of cotton in the recognition of the CSA as sovereign by the English, it does shed light on a 
-crucial, yet heretofore unestablished, piece of this investigation: the importance of cotton in Anglo-Confederate diplomacy. 
+crucial, yet heretofore non-established, piece of this investigation: the importance of cotton in Anglo-Confederate diplomacy. 
 
 Indeed, the main tactic employed by southern diplomats in attempting to secure British condemnation of the blockade was a stressing of the English dependence 
-on the south's cotton exports. The 
+on the south's cotton exports. This emphasis was reciprocated by some members of the Parliament, the most influential of whom was the Lord John Russell, although 
+during the time of the blockade issue he did not yet firmly hold that an interventionist policy should be that of Whitehall: \say{It will not do for England and France to break a blockade for the sake of getting cotton}. \autocite[Russell to Palmerston, quoted in][Vol.I, p.199. There are two possible readings of what Russell said here, resting on one's interpretation of the phrase "It will not do". I have chosen to understand it, as I believe fits most reasonably within the context of the quote, as indicative of Russell's reservations regarding the breaking of the blockade, rather than a feeling that this action does not go far enough.]{adamsBritainAmericanWar1925}
+The discourse regarding intervention in the blockade during these years developed a precedent for the relations of the two powers, made explicit by Prime Minister 
+Palmerston in his response to Russell,
+\begin{quote}
+    [...] the want for cotton would not justify such a proceeding, unless, indeed, the distress created by that want was far more serious than it is likely to be.
+    \Autocite[Vol.I, p.199]{adamsBritainAmericanWar1925}
+\end{quote}
+
+\subsection{The Lancashire Cotton Famine}
+The Prime Minister's assertion of the relatively low want for cotton caused by the blockade would, in the late months of 1862, be challenged. Around this time,
+what is referred to as the \flq Lancashire cotton famine\frq was beginning to take hold, and this event is to be the arena in which any serious evaluation
+of the role of cotton in British recognition of the CSA is to be truly tested. The famine (referred to as such due to the lack of cotton supply, rather than 
+any true mass starvation event) has been extensively covered by numerous works, and there exists a large corpus addressing its origins and 
+implications for the economy, but the interpretation of these seems to greatly differ across sources. 
+
+An accepted view of the cotton famine may be found in \shortcite{arnoldHistoryCotton1864}, a generally accepted work detailing the event, and which 
+presents a picture of a rapidly stagnating goods market in Lancashire\autocite[78]{arnoldHistoryCotton1864}. The all-time highs reached by cotton imports 
+in the 1859-60 fiscal years, which were an attempt to correct for the lack of production by the English textile manufacturing industries caused by the 
+mild economic depression in the mid 1850s (reflected in the dip in exports in the same period of Figure~\ref{fig: B.i}), were, in many respects, an 
+overcompensation. The demand for the goods produced by these mills, mostly coming from the far-eastern markets, was vastly overestimated, and as a result 
+the start of the war saw a record surplus of cotton sitting idle in British harbors. 
+
+The great surplus of cotton was quickly turned into a great surplus of cotton-derived goods, which would not be released onto the market until the 
+eventual increase in demand in 1863. The period of frantic production and establishment of new mills was, by late 1861, at an end, and this naturally led to
+a contraction of the Lancashire operative population (500-600 thousand\autocite[Vol.II, p.13]{adamsBritainAmericanWar1925}). This contraction of the 
+operative labor force led to a sharp increase of people in need of social safety, through \flq poor relief\frq\autocite[Vol.II, p.12]{adamsBritainAmericanWar1925},
+as well as to a large mass of former industrial workers migrating to non-industrial districts\autocite{arthi2022recessions}. Moreover, an increased rate of
+mortality in the districts affected by the cotton famine, as reported by \shortcite{arthi2022recessions}, added more attention to the war, due to the 
+(somewhat erroneous) English attribution of much of the blame for the downturn on the Union\autocite[229]{arnoldHistoryCotton1864} \textemdash
+If there were any time in which the Parliament were to feel a great enough pressure from the English working-class to prompt their willingness to intervene in the American Civil War, 
+it would have been this stage in the cotton famine.
+
