modified:   Paper/.vscode/ltex.dictionary.en-US.txt 	modified:   Paper/Bib/History_IA.bib 	new file:   Paper/HistoryIA 2.synctex(busy) 	modified:   Paper/HistoryIA.bbl 	modified:   Paper/HistoryIA.pdf 	modified:   Paper/HistoryIA.synctex.gz 	modified:   Paper/SECTIONS/section_B.tex

--- a/Paper/Bib/History_IA.bib
+++ b/Paper/Bib/History_IA.bib
@@ -136,8 +136,17 @@
 
 @report{u.s.congressImportsduties1884,
   title       = {H. Misc. Doc. no. 49},
-  author      = {House of Representatives, U.S. Congress},
+  author      = {U.S. Congress, House of Representatives},
   date        = {1884},
   institution = {48th Cong., 1st. sess.},
   abstract    = {A compilation of foreign commodities imported and entered for consumption in the United States ; showing the quantities, values, rates of duty, amount of duty received, the average cost, and duties reduced to an equivalent ad valorem rate ; summaries of the values and duties of the principal class or groups ; also, values and duties received and expense at each Customs district and port of delivery ; with schedules of the articles, quantities, and values admitted free of duty, viz: transfers from bond to manufacturing warehouse, materials used in the construction and equipment of vessels, from dominion of Canada, \&c., from the Hawaiian Islands, and salt used in curing fish, during the fiscal years ended June 30, 1867 to 1883, inclusive}
+}
+@inbook{owsleyIrrepressibleConflict1930,
+  author = {Owsley, Frank Lawrence},
+  chapter = {The Irrepressible Conflict},
+  editor = {},
+  pages = {61-91},
+  publisher = {Harper \& Brothers},
+  title = {I'll Take My Stand: The South and the Agrarian Tradition},
+  year = {1930}
 }
