--- a/Paper/SECTIONS/section_B.tex
+++ b/Paper/SECTIONS/section_B.tex
@@ -1,6 +1,5 @@
 % !TeX root = ../HistoryIA.tex
 
-
 \Autocites(Data in Figure~\ref{fig: B.i}:)()[Total exports:][Part 2, Table 2]{u.s.congressImportsduties1884}[Cotton exports:][Table A-III]{northeconomicgrowth1966}
 On the eve of the American Civil War, U.S. cotton accounted for over 88\% of the cotton imported into Great Britain \autocite[40]{baileyOtherSide1994}. This 
 cotton was, as noted by Joseph Inikori, the key to the English economy in the mid-19th century: 
@@ -44,27 +43,71 @@ Palmerston in his response to Russell,
     \Autocite[Vol.I, p.199]{adamsBritainAmericanWar1925}
 \end{quote}
 
-\subsection{The Lancashire Cotton Famine}
+\hfill
+
 The Prime Minister's assertion of the relatively low want for cotton caused by the blockade would, in the late months of 1862, be challenged. Around this time,
 what is referred to as the \flq Lancashire cotton famine\frq was beginning to take hold, and this event is to be the arena in which any serious evaluation
 of the role of cotton in British recognition of the CSA is to be truly tested. The famine (referred to as such due to the lack of cotton supply, rather than 
 any true mass starvation event) has been extensively covered by numerous works, and there exists a large corpus addressing its origins and 
 implications for the economy, but the interpretation of these seems to greatly differ across sources. 
 
-An accepted view of the cotton famine may be found in \shortcite{arnoldHistoryCotton1864}, a generally accepted work detailing the event, and which 
+An accepted view of the cotton famine may be found in \shortcite{arnoldHistoryCotton1864}, a commonly cited work detailing the event, which 
 presents a picture of a rapidly stagnating goods market in Lancashire\autocite[78]{arnoldHistoryCotton1864}. The all-time highs reached by cotton imports 
 in the 1859-60 fiscal years, which were an attempt to correct for the lack of production by the English textile manufacturing industries caused by the 
 mild economic depression in the mid 1850s (reflected in the dip in exports in the same period of Figure~\ref{fig: B.i}), were, in many respects, an 
 overcompensation. The demand for the goods produced by these mills, mostly coming from the far-eastern markets, was vastly overestimated, and as a result 
 the start of the war saw a record surplus of cotton sitting idle in British harbors. 
 
-The great surplus of cotton was quickly turned into a great surplus of cotton-derived goods, which would not be released onto the market until the 
-eventual increase in demand in 1863. The period of frantic production and establishment of new mills was, by late 1861, at an end, and this naturally led to
-a contraction of the Lancashire operative population (500-600 thousand\autocite[Vol.II, p.13]{adamsBritainAmericanWar1925}). This contraction of the 
-operative labor force led to a sharp increase of people in need of social safety, through \flq poor relief\frq\autocite[Vol.II, p.12]{adamsBritainAmericanWar1925},
+The great surplus of cotton was, somewhat counterintuitively, advantageous to those who ran cotton manufactures. The speculative market for cotton,
+which had long been a profitable venture, soared with the rising prices caused by the diminished supply from the Southern states. However, the situation
+was not entirely so benign \textemdash the period of frantic production and establishment of new mills was, by late 1861, at an end, and this naturally led to
+a contraction of the Lancashire operative population (500-600 thousand\Autocite*[Vol.II, p.13]{adamsBritainAmericanWar1925}). This contraction of the 
+operative labor force led to a sharp increase of people in need of social safety, through \flq poor relief\frq\footnote{\textit{Ibid.}, 12},
 as well as to a large mass of former industrial workers migrating to non-industrial districts\autocite{arthi2022recessions}. Moreover, an increased rate of
 mortality in the districts affected by the cotton famine, as reported by \shortcite{arthi2022recessions}, added more attention to the war, due to the 
 (somewhat erroneous) English attribution of much of the blame for the downturn on the Union\autocite[229]{arnoldHistoryCotton1864} \textemdash
-If there were any time in which the Parliament were to feel a great enough pressure from the English working-class to prompt their willingness to intervene in the American Civil War, 
-it would have been this stage in the cotton famine.
+If there were any time in which the Parliament were to feel a great enough pressure from the working-class to prompt their willingness to intervene in the
+American Civil War, it would have been this stage in the cotton famine.
 
+This pressure, however, would never materialize. The general blame placed upon the Union for the plight of the Lancashire manufactures industry did not,
+as one may expect, correspond to a popular push for intervention, recognition, or, indeed, mediation of any sort, in the American war. In fact, it is
+of note that there was a general fear among the cotton magnates of the county as to the sudden flood of Southern cotton into the already overloaded 
+English ports\Autocite[Vol.II, p.11]{adamsBritainAmericanWar1925}. Remarkably, the cotton famine was less a lack of cotton in Britain, in fact their 
+stores of both raw cotton and cotton-derived goods were higher than previous years going into the famine, but more so a lack of a suitable market
+for these stockpiled goods. Because there was more than enough supply in the domestic stock, the mills which had seen frantic expansion and production
+just a year earlier were now either temporarily shut down, or running only part-time. The lack of production in these goods did, however, lead to a
+rise in prices\footnote{\textit{Ibid.}}, and was another economic blow to the already unemployed and impoverished former operatives.
+
+Along with the rising prices associated with the stagnant production of textiles, as the cotton famine bore on, the stocks rapidly diminished, and
+prices rose further \textemdash a source of cotton was needed, and through 1863, the blockade was making itself known. One would naturally expect this 
+to cause  an increase in interventionist sentiment among urban industrial workers, however this was not the case\autocite{steeleOntologicalSecurity2005}.
+Rather, the situation was, as Arnold presents, that
+\begin{quote}
+    the surplus production of 1859-61 had been consumed, and the over-fed markets had digested the glut of goods that had been forced upon them. [...]
+    The Famine was past; from henceforth as cotton came into our ports it would not, as it had done, accumulate there. Whatever might be the
+    price, it would still find its way to the mills. \Autocite[331]{arnoldHistoryCotton1864}
+\end{quote}
+It is thus that the meaningful hope of British recognition of the southern states as an independent sovereign nation faded from national discourse. With
+the famine gone, and thereby the immediate want for cotton being lessened, along with the Union's addition of the abolition of slavery to its stated 
+aims, the Palmerston government was no longer in a position which even slightly justified recognition in the eyes of the public\Autocite{steeleOntologicalSecurity2005}.
+
+It is as such that I shall posit my final claim: Though Britain did not recognize the sovereign character of the southern states, and though, 
+even at the height of the Lancashire cotton famine, there was no serious push from the urban industrial populations to do so, it is evident that the several actualized
+steps taken by the administration were directly and substantially influenced by their preestablished economic dependence on the south's raw cotton production. I shall
+also note that this claim does not seek to attribute to cotton the state of British neutrality, rather I simply state that many of the most prominent pushes for
+recognizing the Confederacy arose from concerns regarding cotton.
+
+\hfill
+
+In his \textit{King Cotton Diplomacy: Foreign Relations of the Confederate States of America}, a source which is heavily relied upon in the study of this matter,
+Frank Lawrence Owsley stresses the importance of cotton on the policy of neutrality, rather than simply its role in the opposition to said policy. I have, in this work,
+deliberately avoided the use of this source, as it places an importance upon cotton in all aspects of neutrality which I feel is undue, as well as is unsupported by
+many of the more recent works on the subject. However, the prominence of this work in contemporary discourse, as well as since its publication in 1931, means that
+its narrative, from which the conclusions drawn by this paper differ, must be at the very least addressed.
+
+The resolutely early 20th-century analysis of the neutrality of Britain in the American Civil War in the sole terms of economics, as noted by Ginzberg in his
+somewhat-rebuttal of both the cotton and wheat theses, \say{cannot be relied on primarily, not to mention solely, in analyzing the outbreak of a war, or the neutrality 
+of an interested party.} \autocite{ginzbergeconomicsbritish1936}. Further, the fact that Owsley was an avid white supremacist who had, just one year prior to publishing
+\textit{King Cotton Diplomacy}, written of the postbellum freedmen as \say{half-savage blacks}\Autocite[62]{owsleyIrrepressibleConflict1930} should not be discounted
+when regarding his works. Overall, I find Owsley's arguments in \textit{King Cotton} to be deeply unconvincing, and I find his merit as an academic who was attempting to
+present an unbiased perspective of the civil war to be questionable at best.
