modified:   Paper/HistoryIA.pdf 	modified:   Paper/HistoryIA.synctex.gz 	modified:   Paper/SECTIONS/section_B.tex

--- a/Paper/SECTIONS/section_B.tex
+++ b/Paper/SECTIONS/section_B.tex
@@ -101,7 +101,7 @@ recognizing the Confederacy arose from concerns regarding cotton.
 
 In his \textit{King Cotton Diplomacy: Foreign Relations of the Confederate States of America}, a source which is heavily relied upon in the study of this matter,
 Frank Lawrence Owsley stresses the importance of cotton on the policy of neutrality, rather than simply its role in the opposition to said policy. I have, in this work,
-deliberately avoided the use of this source, as it places an importance upon cotton in all aspects of neutrality which I feel is undue, as well as is unsupported by
+deliberately avoided the use of this source, as it places an importance upon cotton in all aspects of neutrality which I feel is undue, as well as unsupported by
 many of the more recent works on the subject. However, the prominence of this work in contemporary discourse, as well as since its publication in 1931, means that
 its narrative, from which the conclusions drawn by this paper differ, must be at the very least addressed.
 
