modified:   Paper/Bib/History_IA.bib 	new file:   Paper/HistoryIA-blx.bib 	modified:   Paper/HistoryIA.bbl 	modified:   Paper/HistoryIA.pdf 	modified:   Paper/HistoryIA.synctex.gz 	modified:   Paper/HistoryIA.tex

--- a/Paper/Bib/History_IA.bib
+++ b/Paper/Bib/History_IA.bib
@@ -23,7 +23,7 @@
   number    = {2},
   pages     = {228--255},
   year      = {2022},
-  publisher = {American Economic Association 2014 Broadway, Suite 305, Nashville, TN 37203-2425}
+  publisher = {American Economic Association}
 }
 
 @article{baileyOtherSide1994,
