--- a/Paper/HistoryIA.tex
+++ b/Paper/HistoryIA.tex
@@ -47,17 +47,13 @@
 
 %% BIBLIOGRAPHY SETTINGS
 %---------------------------------------------------------------------------------------------------------%
-\usepackage[
-notes,
-backend=biber,
-sorting=nyt
-]{biblatex-chicago}
+\usepackage[notes,backend=bibtex,sorting=nty]{biblatex-chicago}
 \addbibresource{Bib/History_IA.bib}
 %---------------------------------------------------------------------------------------------------------%
 
 %% TOC SETTINGS
 %---------------------------------------------------------------------------------------------------------%
-\usepackage{titlesec}
+\usepackage{titlesec, bookmark}
 \addto\captionsenglish{\renewcommand*\contentsname{Contents}}
 \usepackage{tocbibind}
 %---------------------------------------------------------------------------------------------------------%
