--- a/Paper/Bib/History_IA.bib
+++ b/Paper/Bib/History_IA.bib
@@ -143,7 +143,7 @@
 }
 @inbook{owsleyIrrepressibleConflict1930,
   author = {Owsley, Frank Lawrence},
-  chapter = {The Irrepressible Conflict},
+  chapter = {{{The Irrepressible Conflict}}},
   editor = {},
   pages = {61-91},
   publisher = {Harper \& Brothers},
