modified:   Paper/.vscode/ltex.hiddenFalsePositives.en-US.txt 	modified:   Paper/Bib/History_IA.bib 	modified:   Paper/HistoryIA.bbl 	modified:   Paper/HistoryIA.pdf 	modified:   Paper/HistoryIA.synctex.gz 	modified:   Paper/SECTIONS/section_B.tex 	modified:   Paper/SECTIONS/section_C.tex

--- a/Paper/Bib/History_IA.bib
+++ b/Paper/Bib/History_IA.bib
@@ -117,6 +117,15 @@
   pagetotal = {304}
 }
 
+@incollection{owsleyIrrepressibleConflict1930,
+  author    = {Owsley, Frank Lawrence},
+  title     = {{{The Irrepressible Conflict}}},
+  pages     = {61-91},
+  publisher = {Harper \& Brothers},
+  booktitle = {I'll Take My Stand: The South and the Agrarian Tradition},
+  year      = {1930}
+}
+
 @article{steeleOntologicalSecurity2005,
   title        = {Ontological {{Security}} and the {{Power}} of {{Self-Identity}}: {{British Neutrality}} and the {{American Civil War}}},
   author       = {Steele, Brent J.},
@@ -133,20 +142,10 @@
   urldate      = {2024-11-01},
   abstract     = {[Why did Great Britain remain neutral during the American Civil War? Although several historical arguments have been put forth, few studies have explicitly used International Relations (IR) theories to understand this decision. Synthesising a discursive approach with an ontological security interpretation, I propose an alternative framework for understanding security-seeking behaviour and threats to identity. I assess the impact Abraham Lincoln's Emancipation Proclamation had upon the interventionist debates in Great Britain. I argue that the Proclamation reframed interventionist debates, thus (re)engendering the British anxiety over slavery and removing intervention as a viable policy. I conclude by proposing several issues relevant to using an ontological security interpretation in future IR studies.]}
 }
-
 @report{u.s.congressImportsduties1884,
   title       = {H. Misc. Doc. no. 49},
   author      = {U.S. Congress, House of Representatives},
   date        = {1884},
   institution = {48th Cong., 1st. sess.},
   abstract    = {A compilation of foreign commodities imported and entered for consumption in the United States ; showing the quantities, values, rates of duty, amount of duty received, the average cost, and duties reduced to an equivalent ad valorem rate ; summaries of the values and duties of the principal class or groups ; also, values and duties received and expense at each Customs district and port of delivery ; with schedules of the articles, quantities, and values admitted free of duty, viz: transfers from bond to manufacturing warehouse, materials used in the construction and equipment of vessels, from dominion of Canada, \&c., from the Hawaiian Islands, and salt used in curing fish, during the fiscal years ended June 30, 1867 to 1883, inclusive}
-}
-@inbook{owsleyIrrepressibleConflict1930,
-  author = {Owsley, Frank Lawrence},
-  chapter = {{{The Irrepressible Conflict}}},
-  editor = {},
-  pages = {61-91},
-  publisher = {Harper \& Brothers},
-  title = {I'll Take My Stand: The South and the Agrarian Tradition},
-  year = {1930}
 }
