--- a/Paper/SECTIONS/section_B.tex
+++ b/Paper/SECTIONS/section_B.tex
@@ -107,7 +107,7 @@ its narrative, from which the conclusions drawn by this paper differ, must be at
 
 The resolutely early 20th-century analysis of the neutrality of Britain in the American Civil War in the sole terms of economics, as noted by Ginzberg in his
 somewhat-rebuttal of both the cotton and wheat theses, \say{cannot be relied on primarily, not to mention solely, in analyzing the outbreak of a war, or the neutrality 
-of an interested party.} \autocite{ginzbergeconomicsbritish1936}. Further, the fact that Owsley was an avid white supremacist who had, just one year prior to publishing
+of an interested party.} \Autocite{ginzbergeconomicsbritish1936}. Further, the fact that Owsley was an avid white supremacist who had, just one year prior to publishing
 \textit{King Cotton Diplomacy}, written of the postbellum freedmen as \say{half-savage blacks}\Autocite[62]{owsleyIrrepressibleConflict1930} should not be discounted
 when regarding his works. Overall, I find Owsley's arguments in \textit{King Cotton} to be deeply unconvincing, and I find his merit as an academic who was attempting to
 present an unbiased perspective of the civil war to be questionable at best.
