--- a/Paper/SECTIONS/section_C.tex
+++ b/Paper/SECTIONS/section_C.tex
@@ -1,1 +1,18 @@
 % !TeX root = ../HistoryIA.tex
+
+This investigation has brought to my attention several key features of the methods used by historians. I have found that the foremost challenge I faced in this,
+and which is central to the process of studying and writing of history, was an understanding of which sources, lenses, and conclusions were appropriate to consider
+in the course of my research. For instance, the economic analysis of Britain's neutrality during the American Civil War, a lens which I initially considered to
+be at the core of this investigation, is one which, for various reasons, is not accepted by the historiography on the subject. As such, I had to reconsider the
+conclusions which I had expected to draw from my research, and which seemed to me almost self-evident from a precursory glance, and approach the question from
+a more subtle and nuanced lens. This did, in the end, lead me to a much more satisfying conclusion, however it was not one which was easy to arrive at.
+
+Further, and as I touched upon in my mention of Owsley's \textit{King Cotton Diplomacy}, the nature of academic discourse during early-to-mid 20th
+century has led me to conduct a critical evaluation of each source I made reference to, insofar as to check for content containing a significant bias towards
+the Confederacy. My reliance on scholarly works has been heavy, and, though many of the most commonly-cited works on the topic were written during the period
+mentioned, I have made deliberate efforts to use more recent studies to fill in the gaps left by the older ones. 
+
+I have, to the best of my ability, answered the question posed, through a lens which is accepted in the current historiographical zeitgeist on the topic. The
+lens of analysis I have used is not suitable for a complete understanding of the issue, a fact that has become increasingly clear to me as I have researched this
+topic. This is, I believe, the largest challenge of the historian, and one which is endemic to the nature of historical events as multifaceted and complex
+events: no single study, regardless of its breadth and/or depth, shall ever be able to fully capture an event and its many interpretations.
