--- a/Paper/SECTIONS/section_A.tex
+++ b/Paper/SECTIONS/section_A.tex
@@ -1,8 +1,8 @@
 % !TeX root = ../HistoryIA.tex
 
 This paper seeks to investigate the question: \flq{}\textit{How did the Export of Southern Raw Cotton to Great Britain Influence Its Willingness to Recognize the
-Confederate States of America as a Sovereign Nation?}\frq{}. It is well-known that the southern United States is a largely agrarian region of the nation, and further that the 
-economy of these states has, since the colonial era, been heavily dependent on the exportation of various \flq{}cash crops\frq{}. Cotton, the crop with which 
+Confederate States of America as a Sovereign Nation?}\frq{}. It is well-known that the southern United States is a largely agrarian region of the nation, and further that 
+the economy of these states has, since the colonial era, been heavily dependent on the exportation of various \flq{}cash crops\frq{}. Cotton, the crop with which 
 the 19th century south is most associated, became the staple export of the region, and indeed may be argued to have kick-started or at least supported the 
 lucrative textile industry of Great Britain. In this paper I examine the economic codependency of the Antebellum South (and subsequently the of the 
 Confederate States of America [CSA]) with Great Britain, and the effects of this relationship on the prospect of the British Parliament's diplomatic 
