modified:   .DS_Store 	modified:   Paper/.vscode/ltex.dictionary.en-US.txt 	modified:   Paper/.vscode/ltex.hiddenFalsePositives.en-US.txt 	modified:   Paper/Bib/History_IA.bib 	new file:   Paper/HistoryIA 2.synctex(busy) 	new file:   Paper/HistoryIA 3.synctex(busy) 	modified:   Paper/HistoryIA.bbl 	modified:   Paper/HistoryIA.pdf 	modified:   Paper/HistoryIA.synctex.gz 	modified:   Paper/HistoryIA.tex 	modified:   Paper/SECTIONS/section_B.tex

--- a/Paper/Bib/History_IA.bib
+++ b/Paper/Bib/History_IA.bib
@@ -60,7 +60,7 @@
 @article{ewanEmancipationProclamation2005,
   title        = {The {{Emancipation Proclamation}} and {{British Public Opinion}}},
   author       = {Ewan, Christopher},
-  date         = {2005-21},
+  date         = {2005},
   journaltitle = {The Historian},
   volume       = {67},
   number       = {1},
