--- a/Paper/HistoryIA.tex
+++ b/Paper/HistoryIA.tex
@@ -67,9 +67,9 @@ right=1in,left=1in,
 headheight=12pt,
 bottom=1in,
 footnotesep=20pt,
-top=60pt
+top=60pt,
+letterpaper
 ]{geometry}
-\geometry{letterpaper}
 \renewcommand{\footruleskip}{20pt}
 %---------------------------------------------------------------------------------------------------------%
 
