--- a/Paper/SECTIONS/section_B.tex
+++ b/Paper/SECTIONS/section_B.tex
@@ -7,11 +7,11 @@ cotton was, as noted by Joseph Inikori, the key to the English economy in the mi
     Indeed, \say{the Industrial Revolution} in England, in the strict sense of the phrase, is little more than a revolution in [...] cotton textile production.
     \autocite[Joseph Inikori, {The Slave Trade and Revolution in Cotton Textile Production in England}, quoted in][40]{baileyOtherSide1994}
 \end{quote}
-On the other side of the Atlantic, in the continental United States, in the time leading up to the war, the amount and value of exported goods skyrocketed, 
-and, though by 1860 the percentage of the total value of exports that cotton represented was lower than it had been in 1851, it was at an all-time high in 
-terms of dollar-value (Figure~\ref{fig: B.i}). The importance of this economic relationship for the Confederate cause was not lost on the rebelling sates, 
-and unquestionably played a significant role in their foreign policy towards England throughout the course of the war. However, the extent to which this was an 
-effective diplomatic strategy is not comparably evident, and is the central focus of this investigation. 
+Across the Atlantic, leading up to the war, the amount of exported goods skyrocketed, 
+and, though by 1860 percentage of exports represented by cotton was lower than in 1851, it was at an all-time high in 
+terms of dollar-value (Figure~\ref{fig: B.i}). The importance of this economic relationship for the Confederate cause understood by the rebelling sates, 
+and unquestionably played a significant role in their foreign policy towards England throughout the course of the war. However, the effectiveness of this strategy 
+is not comparably evident, and is the central focus of this investigation. 
 
 \begin{figure}[ht]
     \centering
@@ -24,90 +24,75 @@ effective diplomatic strategy is not comparably evident, and is the central focu
     \label{fig: B.i}
 \end{figure} 
 
-In terms of end goals, the CSA had two when it came to diplomacy with the English: (1) an official recognition of the sovereignty of the nation, with the
-understanding that this would lead to mediation of the conflict by Britain, and (2) the removal of the Union naval blockade on Southern ports
-\Autocites()()[][383]{mcphersonBattleCry1988}[W.L. Yancey and A. Dudley Mann to Secretary of State R. Toombs, July 15, 1861, in:][45]{davismessagespapers1966}.
-It is the latter issue's nature terms of international law, and effects on the cotton exports of the south, that would play the most significant role in
+In terms of diplomacy, the CSA had two primary goals: (1) an official recognition of national sovereignty, with the
+understanding that this would result in British mediation, and (2), the lifting of the Union blockade on Southern ports
+\Autocites()()[][383]{mcphersonBattleCry1988}[W.L. Yancey and A. Dudley Mann $\rightarrow$ Secretary of State R. Toombs, July 15, 1861, in:][45]{davismessagespapers1966}.
+The latter issue's nature terms of international law, and effects on southern cotton exports, would play the most significant role in
 the Anglo-Confederate relations during the early war, as it presented a goal which was \say{much more likely to be obtained within a reasonable time} than
-recognition\autocite[John Slidell to Secretary of State R.M.T. Hunter, September 26, 1862, in:][187]{davismessagespapers1966}. Though this issue does not
-directly relate of the answer of the question regarding the role of cotton in the recognition of the CSA as sovereign by the English, it does shed light on a 
-crucial, yet heretofore non-established, piece of this investigation: the importance of cotton in Anglo-Confederate diplomacy. 
+recognition\autocite[John Slidell $\rightarrow$ Secretary of State R.M.T. Hunter, September 26, 1862, in:][187]{davismessagespapers1966}. Though this issue does not
+directly answer the question posed by this investigation, it does shed light on a 
+crucial, yet heretofore unestablished, piece of this investigation: the importance of cotton in Anglo-Confederate diplomacy. 
 
-Indeed, the main tactic employed by southern diplomats in attempting to secure British condemnation of the blockade was a stressing of the English dependence 
-on the south's cotton exports. This emphasis was reciprocated by some members of the Parliament, the most influential of whom was the Lord John Russell, although 
-during the time of the blockade issue he did not yet firmly hold that an interventionist policy should be that of Whitehall: \say{It will not do for England and France to break a blockade for the sake of getting cotton}. \autocite[Russell to Palmerston, quoted in][Vol.I, p.199. There are two possible readings of what Russell said here, resting on one's interpretation of the phrase "It will not do". I have chosen to understand it, as I believe fits most reasonably within the context of the quote, as indicative of Russell's reservations regarding the breaking of the blockade, rather than a feeling that this action does not go far enough.]{adamsBritainAmericanWar1925}
+The main tactic employed by southern diplomats in securing British condemnation of the blockade was to stress the English dependence 
+on the south's cotton. This emphasis was reciprocated by some members of the Parliament, the most influential being Lord John Russell, although 
+during the time of the blockade issue he did not yet firmly hold that Whitehall's policy should be interventionist: \say{It will not do for England and France to break a blockade for the sake of getting cotton}. \autocite[Russell $\rightarrow$ Palmerston, quoted in][Vol.I, p.199. There are two possible readings of what Russell said here, resting on one's interpretation of the phrase "It will not do". I have chosen to understand it, as I believe fits most reasonably within the context of the quote, as indicative of Russell's reservations regarding the breaking of the blockade, rather than a feeling that this action does not go far enough.]{adamsBritainAmericanWar1925}
 The discourse regarding intervention in the blockade during these years developed a precedent for the relations of the two powers, made explicit by Prime Minister 
 Palmerston in his response to Russell,
 \begin{quote}
     [...] the want for cotton would not justify such a proceeding, unless, indeed, the distress created by that want was far more serious than it is likely to be.
-    \Autocite[Vol.I, p.199]{adamsBritainAmericanWar1925}
+    \Autocite[Palmerston $\rightarrow$ Russell, quoted in][Vol.I, p.199]{adamsBritainAmericanWar1925}
 \end{quote}
 
 \hfill
 
-The Prime Minister's assertion of the relatively low want for cotton caused by the blockade would, in the late months of 1862, be challenged. Around this time,
-what is referred to as the \flq Lancashire cotton famine\frq was beginning to take hold, and this event is to be the arena in which any serious evaluation
-of the role of cotton in British recognition of the CSA is to be truly tested. The famine (referred to as such due to the lack of cotton supply, rather than 
-any true mass starvation event) has been extensively covered by numerous works, and there exists a large corpus addressing its origins and 
-implications for the economy, but the interpretation of these seems to greatly differ across sources. 
+The Prime Minister's assertion of relatively low want for cotton resulting from the blockade would, in the late months of 1862, be challenged. Around this time,
+what is referred to as the \flq Lancashire cotton famine\frq was beginning to take hold, and this event is the arena in which any serious evaluation
+of the role of cotton in Anglo-Confederate diplomacy is to be evaluated. The famine (referred to as such due to the low cotton supply, rather than 
+a true mass starvation event) has been extensively covered by numerous works, and there exists a large corpus addressing its origins and 
+economic implications, however interpretation greatly differs across sources. 
 
-An accepted view of the cotton famine may be found in \shortcite{arnoldHistoryCotton1864}, a commonly cited work detailing the event, which 
+An accepted view of the cotton famine may be found in \shortcite{arnoldHistoryCotton1864}, a respected work on the event, which 
 presents a picture of a rapidly stagnating goods market in Lancashire\autocite[78]{arnoldHistoryCotton1864}. The all-time highs reached by cotton imports 
-in the 1859-60 fiscal years, which were an attempt to correct for the lack of production by the English textile manufacturing industries caused by the 
-mild economic depression in the mid 1850s (reflected in the dip in exports in the same period of Figure~\ref{fig: B.i}), were, in many respects, an 
-overcompensation. The demand for the goods produced by these mills, mostly coming from the far-eastern markets, was vastly overestimated, and as a result 
-the start of the war saw a record surplus of cotton sitting idle in British harbors. 
+in 1859-60, which were an attempt to correct for the lack of production by the English textile manufacturing industries caused by the 
+economic depression in the mid 1850s (reflected in the dip in exports in the same period of Figure~\ref{fig: B.i}), were an 
+overcompensation. The demand for the goods produced by these mills, mostly in far-eastern markets, was vastly overestimated, and as a result 
+the start of the war saw a record surplus stock of cotton sitting in British storehouses and ports. 
 
-The great surplus of cotton was, somewhat counterintuitively, advantageous to those who ran cotton manufactures. The speculative market for cotton,
-which had long been a profitable venture, soared with the rising prices caused by the diminished supply from the Southern states. However, the situation
+The great surplus stock of cotton was, somewhat counterintuitively, advantageous to those who ran cotton mills. The speculative cotton market,
+which had long been a profitable venture, soared with the rising prices resulting from diminished cotton imported. However, the situation
 was not entirely so benign \textemdash the period of frantic production and establishment of new mills was, by late 1861, at an end, and this naturally led to
-a contraction of the Lancashire operative population (500-600 thousand\Autocite*[Vol.II, p.13]{adamsBritainAmericanWar1925}). This contraction of the 
-operative labor force led to a sharp increase of people in need of social safety, through \flq poor relief\frq\footnote{\textit{Ibid.}, 12},
-as well as to a large mass of former industrial workers migrating to non-industrial districts\autocite{arthi2022recessions}. Moreover, an increased rate of
-mortality in the districts affected by the cotton famine, as reported by \shortcite{arthi2022recessions}, added more attention to the war, due to the 
-(somewhat erroneous) English attribution of much of the blame for the downturn on the Union\autocite[229]{arnoldHistoryCotton1864} \textemdash
-If there were any time in which the Parliament were to feel a great enough pressure from the working-class to prompt their willingness to intervene in the
+a contraction of the Lancashire operative population (500-600 thousand\Autocite*[Vol.II, p.13]{adamsBritainAmericanWar1925}). This contraction led to a sharp
+increase of people requiring social safety through \flq poor relief\frq\footnote{\textit{Ibid.}, 12},
+as well as to a large mass of former industrial workers migrating to non-industrial districts\autocite{arthi2022recessions}. Moreover, an increased mortality rate
+in affected districts, as detailed in \shortcite{arthi2022recessions}, increased attention to the war, due to the 
+(largely erroneous) English attribution of blame for the downturn on the Union\autocite[229]{arnoldHistoryCotton1864} \textemdash
+If there were any time in which Parliament were to feel a great enough pressure from the working-class to prompt their willingness to intervene in the
 American Civil War, it would have been this stage in the cotton famine.
 
-This pressure, however, would never materialize. The general blame placed upon the Union for the plight of the Lancashire manufactures industry did not,
-as one may expect, correspond to a popular push for intervention, recognition, or, indeed, mediation of any sort, in the American war. In fact, it is
-of note that there was a general fear among the cotton magnates of the county as to the sudden flood of Southern cotton into the already overloaded 
-English ports\Autocite[Vol.II, p.11]{adamsBritainAmericanWar1925}. Remarkably, the cotton famine was less a lack of cotton in Britain, in fact their 
-stores of both raw cotton and cotton-derived goods were higher than previous years going into the famine, but more so a lack of a suitable market
-for these stockpiled goods. Because there was more than enough supply in the domestic stock, the mills which had seen frantic expansion and production
-just a year earlier were now either temporarily shut down, or running only part-time. The lack of production in these goods did, however, lead to a
-rise in prices\footnote{\textit{Ibid.}}, and was another economic blow to the already unemployed and impoverished former operatives.
+This pressure, however, would never materialize. The general antipathy towards the Union for the plight of the Lancashire manufactures industry did not correspond to a popular push for intervention, recognition, or, indeed, mediation of any sort. In fact, it is of note that there was a general fear among the cotton magnates of the county that intervention would lead to the sudden flood of Southern cotton into their already overloaded ports\Autocite[Vol.II, p.11]{adamsBritainAmericanWar1925}. Notably, the \flq cotton famine\frq was less a lack of cotton in Britain, in fact their stores of both raw cotton and cotton-derived goods were higher than previous years going into the famine, but more a lack of suitable market for these stockpiled goods. Because there was large surplus in domestic stock, the mills which had seen frantic expansion and production just a year prior were now either temporarily shut down, or running only part-time. The lack of production did, however, lead to a rise in prices\footnote{\textit{Ibid.}} \textemdash another economic blow to the already impoverished former operatives.
 
-Along with the rising prices associated with the stagnant production of textiles, as the cotton famine bore on, the stocks rapidly diminished, and
-prices rose further \textemdash a source of cotton was needed, and through 1863, the blockade was making itself known. One would naturally expect this 
-to cause  an increase in interventionist sentiment among urban industrial workers, however this was not the case\autocite{steeleOntologicalSecurity2005}.
-Rather, the situation was, as Arnold presents, that
+As the cotton famine bore on, the stocks rapidly diminished, and prices rose further; a source of cotton was needed, and through 1863, the blockade was making its presence increasingly felt. One would naturally expect this to cause  an increase in interventionist sentiment among urban industrial workers, however this was not the case\autocite{steeleOntologicalSecurity2005}. Rather, the situation was, as Arnold presents, that
 \begin{quote}
     the surplus production of 1859-61 had been consumed, and the over-fed markets had digested the glut of goods that had been forced upon them. [...]
     The Famine was past; from henceforth as cotton came into our ports it would not, as it had done, accumulate there. Whatever might be the
     price, it would still find its way to the mills. \Autocite[331]{arnoldHistoryCotton1864}
 \end{quote}
-It is thus that the meaningful hope of British recognition of the southern states as an independent sovereign nation faded from national discourse. With
-the famine gone, and thereby the immediate want for cotton being lessened, along with the Union's addition of the abolition of slavery to its stated 
-aims, the Palmerston government was no longer in a position which even slightly justified recognition in the eyes of the public\Autocite{steeleOntologicalSecurity2005}.
+It is thus that the meaningful hope of British recognition of the southern states' sovereignty faded from national discourse. With the famine gone, and thereby the immediate want for cotton lessened, in tandem with a key addition to the Union's stated war aims through the Emancipation Proclamation, the Palmerston government was no longer in a position which even slightly justified recognition in the eyes of the public\Autocites{ewanEmancipationProclamation2005}{steeleOntologicalSecurity2005}.
 
-It is as such that I shall posit my final claim: Though Britain did not recognize the sovereign character of the southern states, and though, 
+It is as such that I shall posit my final claim: Though Britain did not recognize the sovereignty of the southern states, and though, 
 even at the height of the Lancashire cotton famine, there was no serious push from the urban industrial populations to do so, it is evident that the several actualized
-steps taken by the administration were directly and substantially influenced by their preestablished economic dependence on the south's raw cotton production. I shall
-also note that this claim does not seek to attribute to cotton the state of British neutrality, rather I simply state that many of the most prominent pushes for
+steps taken by the administration were directly and substantially influenced by their preestablished economic dependence on the southern cotton production. I shall
+also note that this claim does not seek to attribute to cotton the state of British neutrality; I simply state that many pushes for
 recognizing the Confederacy arose from concerns regarding cotton.
 
 \hfill
 
-In his \textit{King Cotton Diplomacy: Foreign Relations of the Confederate States of America}, a source which is heavily relied upon in the study of this matter,
-Frank Lawrence Owsley stresses the importance of cotton on the policy of neutrality, rather than simply its role in the opposition to said policy. I have, in this work,
-deliberately avoided the use of this source, as it places an importance upon cotton in all aspects of neutrality which I feel is undue, as well as unsupported by
-many of the more recent works on the subject. However, the prominence of this work in contemporary discourse, as well as since its publication in 1931, means that
-its narrative, from which the conclusions drawn by this paper differ, must be at the very least addressed.
+In his \textit{King Cotton Diplomacy: Foreign Relations of the Confederate States of America}, a ubiquitous source in the study of this matter,
+Frank Lawrence Owsley stresses the importance of cotton on the policy of neutrality. I have, in this work,
+deliberately avoided the use of this source, as it places an importance upon cotton in aspects of neutrality which I find to be undue and in fact contested by
+many more recent works. However, the prominence of this work nearly all relevant discourse since its publication in 1931, means that
+its narrative, from which the conclusions drawn by this paper differ, must be at the very least considered.
 
-The resolutely early 20th-century analysis of the neutrality of Britain in the American Civil War in the sole terms of economics, as noted by Ginzberg in his
-somewhat-rebuttal of both the cotton and wheat theses, \say{cannot be relied on primarily, not to mention solely, in analyzing the outbreak of a war, or the neutrality 
-of an interested party.} \Autocite{ginzbergeconomicsbritish1936}. Further, the fact that Owsley was an avid white supremacist who had, just one year prior to publishing
-\textit{King Cotton Diplomacy}, written of the postbellum freedmen as \say{half-savage blacks}\Autocite[62]{owsleyIrrepressibleConflict1930} should not be discounted
-when regarding his works. Overall, I find Owsley's arguments in \textit{King Cotton} to be deeply unconvincing, and I find his merit as an academic who was attempting to
-present an unbiased perspective of the civil war to be questionable at best.
+The resolutely early 20th-century analysis of its subject in the sole terms of economics, as noted by Ginzberg in his somewhat-rebuttal of both the cotton and wheat theses\footnotemark, \say{cannot be relied on primarily, not to mention solely, in analyzing the outbreak of a war, or the neutrality of an interested party.} \Autocite{ginzbergeconomicsbritish1936}. Further, the fact that Owsley was an avid white supremacist who had, one year prior to publishing \emph{King Cotton Diplomacy}, written of freedpersons as \say{half-savage blacks}\Autocite[62]{owsleyIrrepressibleConflict1930} should not be discounted when regarding his works. Overall, I find Owsley's arguments in \textit{King Cotton} to be rather unconvincing, and his merit as an academic attempting to present an unbiased perspective of the civil war to be questionable at best.
+
+\footnotetext{The wheat thesis is similar in most regards to Owsley's \emph{King Cotton} thesis, however making the argument that British reliance on northern wheat superseded reliance on southern cotton in diplomatic considerations. Further detail is given in \shortcite{ginzbergeconomicsbritish1936}.}
